# vs-fidelityfx

./: LICENSE  README.md  meson.build
include/: fsr1_common.h  pixel_access.h  vs_fidelityfx.h
src/: fsr1_easu.cpp  fsr1_rcas.cpp  lens_chromatic_aberration.cpp  lens_grain.cpp  lens_vignette.cpp  pixel_access.cpp  vs_fidelityfx.cpp
